client/static_src/styles/Work.less
.work {
  height: 100%;

  .work-title {
    color: #ff0000;
    word-wrap: break-word;
  }
  .work-year,
  .work-artist,
  .work-title {
    margin-bottom: 0;
  }
}

.work-drawer {
  padding: 1rem;
  width: 100vw !important;
  margin-top: -1rem;

  @media (min-width: 992px) {
    width: 75vw !important;
  }

  img {
    max-width: 100%;
    max-height: 75vh;
    width: auto;
    height: auto;
    margin: .5rem auto;
  }
}

.work-images {
  text-align: center;
}

